objects/GenAIGtwyRequestLLM__dlm.object
<CustomObject>
    <fields>
        <fullName>KQ_id__c</fullName>
        <label>Key Qualifier Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_parent__c</fullName>
        <label>Key Qualifier Parent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cloud__c</fullName>
        <label>Cloud</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>endpoint__c</fullName>
        <label>Endpoint</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>feature__c</fullName>
        <label>Feature</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>genAILLM__c</fullName>
        <label>Gen AILLM</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <label>Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>llmCallLatency__c</fullName>
        <label>Llm Call Latency</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>llmCallStatus__c</fullName>
        <label>Llm Call Status</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>llmErrorTrace__c</fullName>
        <label>Llm Error Trace</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>metadata__c</fullName>
        <label>Metadata</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>parent__c</fullName>
        <label>Parent</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>region__c</fullName>
        <label>Region</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rel_1753303828083_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GenAIGtwyRequestLLM_parent_map_GenAI_rel</label>
        <referenceTo>GenAIGatewayRequest__dlm</referenceTo>
        <relationshipLabel>GenAIGtwyRequestLLM_parent_map_GenAI_rel</relationshipLabel>
        <relationshipName>rel_1753303828083_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>salesforceOrgId__c</fullName>
        <label>Salesforce Org Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>timestamp__c</fullName>
        <label>Timestamp</label>
        <type>DateTime</type>
    </fields>
</CustomObject>